tests/ucc/type/good/reverse-array-1.c
int main(void)
{
    int a[4];

    return 4[a];
}
