tests/ucc/type/bad/struct-in-struct-2.c
struct a;

struct b
{
    struct a b;
};

struct a
{
    int b;
};
